Resolves: tdf#99360 can't select filter criteria with mouse

regression since

commit 6610ad9aee0c8299880cd1da6cd6a756860ccad9
Author: Jaskaran <jvsg1303@gmail.com>
Date:   Wed Mar 2 07:51:40 2016 +0530

original body of this method were protected by "if (IsActive())" before
conversion, adding that back into the new version makes things apparently work
again

Change-Id: Id7e89c7724ed804d0330645c4e05dee113ce2079