sc/source/ui/dbgui/sfiltdlg.cxx
@@ -392,6 +392,9 @@ IMPL_LINK_TYPED( ScSpecialFilterDlg, EndDlgHdl, Button*, pBtn, void )
 
 void ScSpecialFilterDlg::SyncFocusState()
 {
+    if (!IsActive())
+        return;
+
     if( pEdCopyArea->HasFocus() || pRbCopyArea->HasFocus() )
     {
         pRefInputEdit = pEdCopyArea;
